 * An effective way of finding menus that aren't drawn by kvantum (for excluding them from compensating for shadows by moving on showing).
 * Removed redundant computations after showing a menu. Their results are remembered instead.

V0.11.0
---------
 * Paint QCommandLinkButton completely in the code (panel + icon + texts) to remove discrepancies between it and other kinds of buttons.
 * Don't rotate the toolbar handle on vertical toolbars if it's centered.
 * No separator between toggled and pressed grouped toolbuttons.
 * Don't enforce window size grip with fixed size layouts.

V0.10.10
---------
 * Don't move a menu that isn't drawn by kvantum (when a menu is drawn by a stylesheet, Qt lets QStyle polish it; hence the problem).
 * Reversed the above-mentioned workaround for now because, unfortunately, Qt doesn't provide a reliable way of distinguishing stylesheet menus at the moment they're shown.
 * Don't move detached menus when they're shown.
 * Support LibreOffice's new Qt5 skin (that's much better than the old Qt4 skin).
 * Also check the active action of active popup when determining whether a submenu is going to be shown.
 * Added a key for drawing the spinbox separator also with inline indicators.
 * Changed KvGnome and KvGnomeDark for them to match the latest default GTK+ theme.
 * Changed the drag cursor from drag-move to open-hand.
 * Don't draw title-bar icons on subwindow menu if there isn't enough contrast.
 * Always integrate the drop-down part of a tool button (not only when it has frame expansion).
 * Fixed the text alignment of QCommandLinkButton and added a workaround for the color Qt gave to its text.

V0.10.9
---------
 * Group libfm-qt's path buttons when they aren't on a toolbar and make them follow group_toolbar_buttons on toolbars.
 * Style the split view of pcmanfm-qt appropriately when its view is transparent.
 * Fixed QToolBox with HDPI.
 * Don't let the text of an ordinary progressbar intersect its frame.