@@ -12,6 +12,7 @@ V0.11.1
  * Set QStyle's standard palette to the Kvantum theme palette and make use of it instead of app palette (because app palette may not be reliable with some apps, like Qt Designer).
  * An effective way of finding menus that aren't drawn by kvantum (for excluding them from compensating for shadows by moving on showing).
  * Removed redundant computations after showing a menu. Their results are remembered instead.
+ * Added the missing disabled state of dials.
 
 V0.11.0
 ---------
